welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:53: error: Unit does not take parameters
faireCarre()
          ^